--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
 			<a class="top_nav_item"  href="aboutme.html">About</a>
 		</nav>
 		<h1 id="title2">Contact</h1>
+		<h2>Please contact me by submitting your info<a href="https://docs.google.com/forms/d/e/1FAIpQLSdUhp2PP6YZF3eTqHbq2uosxrqRzCcCJSAcHRoHOnsCpECXSQ/viewform"> here.</a></h2>
 
 	</body>
 
